[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/UI/Fonts/Bit.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/Theme/Main.tres" type="Theme" id=2]
[ext_resource path="res://World/Menus/EndGame.gd" type="Script" id=3]
[ext_resource path="res://Assets/UI/Fonts/DotGothic16-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[node name="EndGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -446, -87 )
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_top = 150.0
margin_right = 512.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 1 )
text = "Score"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -104.0
margin_top = -60.0
margin_right = 96.0
margin_bottom = 28.0
grow_horizontal = 2

[node name="Money" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="MoneyLabel" type="Label" parent="VBoxContainer/Money"]
margin_left = 50.0
margin_right = 121.0
margin_bottom = 35.0
text = "Money:"

[node name="MoneyAmount" type="Label" parent="VBoxContainer/Money"]
margin_left = 125.0
margin_right = 149.0
margin_bottom = 35.0
text = "$0"

[node name="Xp" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 39.0
margin_right = 200.0
margin_bottom = 74.0
alignment = 1

[node name="XpLabel" type="Label" parent="VBoxContainer/Xp"]
margin_left = 26.0
margin_right = 157.0
margin_bottom = 35.0
text = "Expierence:"

[node name="XpAmount" type="Label" parent="VBoxContainer/Xp"]
margin_left = 161.0
margin_right = 173.0
margin_bottom = 35.0
text = "0"

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
margin_top = 78.0
margin_right = 200.0
margin_bottom = 88.0
rect_min_size = Vector2( 200, 10 )
percent_visible = false

[node name="AccountLevelLabel" type="Label" parent="VBoxContainer"]
margin_top = 92.0
margin_right = 200.0
margin_bottom = 116.0
custom_fonts/font = SubResource( 1 )
text = "Level 0"
align = 1

[node name="ExitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = 84.0
margin_right = 122.0
margin_bottom = 121.0
grow_horizontal = 0
text = "Back to main menu"

[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
